# OceanState_Analysis

./: README.md
.github/workflows/: code_quality_check.yml
oceanstate_analysis/: Makefile  README.md  __init__.py  app.py  config.py  pyproject.toml  requirements.txt
oceanstate_analysis/analysis/: __init__.py  config.py  dataset.py  features.py  plots.py  preprocessing.py
oceanstate_analysis/analysis/modeling/: predict.py  train.py
oceanstate_analysis/docs/: data_documentation.md
oceanstate_analysis/notebooks/exploratory/: acid.ipynb  acid_co2.ipynb  acid_redlist.ipynb  co2.ipynb  depth.ipynb  glaciermelting.ipynb  glaciermelting_heat.ipynb  glaciermelting_sealevel.ipynb  global_warning.ipynb  heat.ipynb  nc.ipynb  oceanwarning.ipynb  ph.ipynb  plastic.ipynb  plastic_co2.ipynb  redlistindex.ipynb  sealevel.ipynb
oceanstate_analysis/notebooks/reports/: tram
oceanstate_analysis/reports/: __init__.py  reports.py  tram
