[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oceanstate_analysis"
version = "0.0.1"
description = "A project school to analys the evolution of ocean state"
authors = [
  { name = "Julien DANTE Sophie AHOLOU" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["oceanstate_analysis"]
force_sort_within_sections = true


