[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanstate_analysis"
version = "0.0.1"
description = "A project school to analys the evolution of ocean state"
authors = [
    { name = "Julien DANTE Sophie AHOLOU" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pathlib",
    "matplotlib",
    "seaborn",
    "black",
    "flake8",
    "isort",
    "loguru",
    "python-dotenv",
    "tqdm",
    "typer"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["oceanstate_analysis*"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["oceanstate_analysis"]
force_sort_within_sections = true